--- a/.gitignore
+++ b/.gitignore
@@ -5,41 +5,43 @@
 *.swp
 .DS_Store
 .atom/
-.build/
 .buildlog/
 .history
 .svn/
 .swiftpm/
 migrate_working_dir/
 
-# IntelliJ related
+# IDE/Editor
 *.iml
 *.ipr
 *.iws
 .idea/
+.vscode/  # Uncomment if you want to exclude VS Code settings
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
+# Flutter/Dart
 **/doc/api/
-**/ios/Flutter/.last_build_id
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/
+/build/  # Excludes all build directories (except web deploy)
+!build/web/  # Keep the web build output (for deployment)
 
-# Symbolication related
-app.*.symbols
-
-# Obfuscation related
-app.*.map.json
-
-# Android Studio will place build artifacts here
+# Android/iOS
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/.gradle/  # Critical: Excludes large Gradle cache
+/ios/Flutter/.last_build_id
+/ios/Pods/
+/ios/.symlinks/
+
+# Web
+*.js.map
+*.js
+*.json
+
+# System Files
+Thumbs.db
+ehthumbs.db
